--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   location: ^5.0.0
   http: ^1.1.0
   flutter_dotenv: ^5.1.0
+  google_maps_flutter: ^2.3.1
 
 dev_dependencies:
   flutter_test:
