--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,9 @@ dependencies:
   http: ^1.1.0
   flutter_dotenv: ^5.1.0
   google_maps_flutter: ^2.3.1
+  path_provider: ^2.0.15
+  path: ^1.8.3
+  sqflite: ^2.2.8+4
 
 dev_dependencies:
   flutter_test:
